--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server  --open --mode development"
+    "dev": "sapper dev",
+    "build": "sapper build",
+    "export": "sapper export",
+    "start": "node __sapper__/build"
   },
   "repository": {
     "type": "git",
@@ -18,17 +20,14 @@
   },
   "homepage": "https://github.com/martin-stepwolf/svelte#readme",
   "dependencies": {
-    "svelte": "^3.29.7"
+    "compression": "^1.7.4",
+    "polka": "^0.5.2",
+    "sirv": "^0.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.7",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.7",
-    "babel-loader": "^8.2.1",
-    "html-webpack-plugin": "^4.5.0",
+    "svelte": "^3.18.2",
+    "sapper": "^0.27.12",
     "svelte-loader": "^2.13.6",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.41.6"
   }
 }
